# maxminddb-node

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  zizmor.yml
bench/: lookup.js
dev-bin/: release.sh
src/: cache.rs  decode.rs  errors.rs  ip.rs  lib.rs  metadata.rs  networks.rs  paths.rs
test/: basic.test.js  bench.test.js  decode.test.js  pack-smoke.js  types.ts
