[package]
name = "maxminddb-node"
version = "0.2.0"
edition = "2021"
license = "ISC"
description = "Rust-backed Node.js reader for MaxMind DB files"

[lib]
crate-type = ["cdylib"]
name = "maxminddb_node"

[dependencies]
ipnetwork = "0.21.1"
lru = "0.18.0"
maxminddb = { version = "0.29.0", features = ["mmap"] }
napi = { version = "3.10.1", default-features = false, features = ["napi8"] }
napi-derive = "3.5.9"
self_cell = "1.2.2"
serde = "1.0.228"

[build-dependencies]
napi-build = "2.3.2"
